Start scrolling effects

--- a/src/assets/scss/blocks/about-page/about-specialists.scss
+++ b/src/assets/scss/blocks/about-page/about-specialists.scss
@@ -138,6 +138,10 @@
             top: 12rem;
             right: 0;
 
+            &::before {
+              width: 34rem;
+            }
+
             img {
               width: 32rem;
             }
