--- a/src/assets/scss/blocks/massage-choosing-test/massage-choosing-test.scss
+++ b/src/assets/scss/blocks/massage-choosing-test/massage-choosing-test.scss
@@ -8,6 +8,7 @@
   &__wrapper {
     @include centered-block(48rem);
 
+    overflow: hidden;
     padding-top: 3.5rem;
     padding-bottom: 1rem;
   }
