--- a/src/assets/scss/blocks/menu/main-menu.scss
+++ b/src/assets/scss/blocks/menu/main-menu.scss
@@ -22,7 +22,7 @@
   &__list {
     list-style: none;
     padding: 3rem 18vw;
-    padding-bottom: 6rem;
+    padding-bottom: 0;
 
     .main-menu__additional {
       display: none;
