--- a/src/pug/includes/modules/content/fixed-buttons.pug
+++ b/src/pug/includes/modules/content/fixed-buttons.pug
@@ -5,7 +5,8 @@
     h2.communication-methods__title.visually-hidden Заказ обратного звонка
     button.fixed-button.communication-methods__trigger.popup-callback-form__trigger(type='button' aria-label='Заказать обратный звонок')
       +svg-icon('#phone-icon').callback-form__trigger-icon(width='23' height='25')
-  section.communication-methods__method.online-chat(data-open-popup='online-chat')
+  //- TODO Remove hidden to enable online chat block
+  section.communication-methods__method.online-chat.hidden(data-open-popup='online-chat')
     h2.communication-methods__title.hidden_mobile-tablet Бесплатная консультация
     button.fixed-button.communication-methods__trigger.online-chat__trigger(type='button' aria-label='Открыть онлайн-чат с консультантом')
       +svg-icon('#baloon-icon').online-chat__trigger-icon(width='23' height='28')
