--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -14,8 +14,7 @@ block variables
       theme: '9',
       massage: globalData.massages['anti-cellulite-massage'],
       mainScreenHeading: 'Антицеллюлитный массаж',
-      mainScreenSubheading: `Избавляет от&nbsp;целлюлита, разглаживает кожу. Подтягивает бёдра и ягодицы, уменьшает «ушки»
-        и&nbsp;бока`,
+      mainScreenSubheading: `Избавляет от&nbsp;целлюлита, разглаживает кожу. Подтягивает бёдра, ягодицы и уменьшает «ушки»`,
       mainScreenFeatures: globalData.company.features,
       aboutMassage: [
         {
