--- a/src/pug/pages/neck-massage.pug
+++ b/src/pug/pages/neck-massage.pug
@@ -20,7 +20,7 @@ block variables
         {
           title: 'Что это за процедура?',
           text: [
-            'Массаж шейно-воротниковой зоны — это 30-минутный сеанс массажа, направлен&shy;ный на&nbsp;расслабление шейного отдела, снятие воспалений и зажимов, и восстановление подвижности шеи.',
+            'Массаж шейно-воротниковой зоны&nbsp;— это 30-минутный сеанс медицинского массажа, направлен&shy;ный на&nbsp;расслабление шейного отдела, снятие воспалений и зажимов, и восстановление подвижности шеи.',
             'Лучше всего этот сеанс подойдёт тем, у кого нет заболеваний, но есть риски — например, сидячая работа. Из-за локального воздействия и&nbsp;небольшой продолжительности, этот массаж считается профилактическим.',
             `При проблемах, например неодно&shy;кратной боли в шее, стоит заняться позвоноч&shy;ником целиком, на сеансе <a class='link link_primary' href='back-massage.html'>лечебного массажа спины</a>.`
           ]
@@ -41,7 +41,7 @@ block variables
         }
       ],
       reviewsBlock: {
-        title: 'Отзывы о&nbsp;массаже шейно-воротниковой зоны',
+        title: 'Отзывы о&nbsp;нас',
         reviews: [
           {
             id: 7,
@@ -123,7 +123,7 @@ block variables
       faq: [
         {
           question: `Почему массаж шейно-воротниковой зоны не лечит заболевания шеи?`,
-          answer: `Главная причина в том, что позвоночником нужно заниматься комплексно, и локального воздействия на позвонки шейного отдела недостаточно. Массаж шейно-воротниковой зоны предназначен для профилактики заболеваний, а также он поможет снять боль, если она вызвана легким защемлением или простудой. Но если проблема находится глубже, массаж шейного отдела снимет лишь симптомы, не вылечив причины боли, а значит она может вернуться. Когда специалист проводит лечебный массаж спины, он находит и убирает причину боли в разных отделах спины. Лечение спины отражается и на других частях тела, уходит онемение рук и ног, лечится ассиметрия лица. Дело в том, что позвоночник нужно рассматривать как единую целостную систему, и лечить точно также — комплексно.`
+          answer: `Главная причина в том, что позвоночником нужно заниматься комплексно, и локального воздействия на шейный отдел недостаточно. Массаж шейно-воротниковой зоны предназначен для профилактики заболеваний, а также он поможет снять боль, если она вызвана легким защемлением или простудой. Но если проблема находится глубже, массаж шейного отдела снимет лишь симптомы, не вылечив причины боли, а значит она может вернуться. Когда специалист проводит лечебный массаж спины, он находит и убирает причину боли в разных отделах спины. Дело в том, что позвоночник нужно рассматривать как единую целостную систему, и лечить точно также — комплексно.`
         },
         {
           question: `Какие ещё проблемы решает этот массаж?`,
@@ -131,7 +131,7 @@ block variables
         },
         {
           question: `В каких случаях стоит выбрать этот массаж?`,
-          answer: `Если вы хотите зайти на массаж в перерыве от работы, или после рабочего дня – чтобы освежить голову, слегка расслабиться и сбросить дневное напряжение. Или если вы точно знаете, что боль в шее вызвана простудой, а не заболеванием позвоночника – в таком случае массаж шейного отдела подойдёт идеально.`
+          answer: `Если вы хотите зайти на массаж в перерыве от работы, или после рабочего дня&nbsp;– чтобы освежить голову, слегка расслабиться и сбросить дневное напряжение. Или если вы точно знаете, что боль в шее вызвана простудой или лёгким защемлением, а не заболеванием позвоночника&nbsp;– в таком случае массаж шейного отдела подойдёт идеально.`
         },
         {
           question: `Как поддерживать результат?`,
