--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -54,6 +54,7 @@
 
 @use 'blocks/menu/main-menu';
 @use 'blocks/menu/submenu';
+@use 'blocks/menu/submenu-promo';
 
 @use 'blocks/communication-methods/communication-methods';
 @use 'blocks/communication-methods/callback-form';
