--- a/src/assets/scss/blocks/menu/submenu.scss
+++ b/src/assets/scss/blocks/menu/submenu.scss
@@ -5,11 +5,6 @@
   flex-direction: column;
   justify-content: space-between;
 
-  &__list-group {
-    display: flex;
-    flex-direction: column;
-  }
-
   &__list {
     @include reset-list();
   }
@@ -21,7 +16,7 @@
   }
 
   &__list-heading {
-    margin-top: 2.5rem;
+    margin-top: 3rem;
 
     font-size: 1.6rem;
   }
@@ -58,7 +53,7 @@
 
 @media (min-width: $tablet-min-width) {
   .submenu {
-    flex-direction: row;
+    display: block;
     padding: 2.5vw;
 
     &::before {
@@ -70,12 +65,14 @@
       left: 0;
     }
 
-    &__list {
-      margin: 0 1vw;
+    &__lists {
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 2rem;
     }
 
-    &__list + .submenu__list {
-      margin-top: 2rem;
+    &__list {
+      margin: 0 0.6rem;
     }
 
     &__list-item {
