--- a/src/pug/includes/modules/content/application-form/application-block.pug
+++ b/src/pug/includes/modules/content/application-form/application-block.pug
@@ -1,4 +1,4 @@
-- var formHeading = 'Оставьте заявку и получите скидку 20% на первый сеанс*'
+- var formHeading = 'Оставьте заявку и получите скидку 20% на первый сеанс'
 - var formText = 'Вы увидите, как работает специалист, получи&shy;те профессиональную консультацию и&nbsp;сможе&shy;те определиться с&nbsp;планом процедур. Если вам не&nbsp;понравится, мы вернём деньги за&nbsp;сеанс'
 if locals.data.pageData.theme === '1'
   - formHeading = 'Акция на январь и февраль. Любое количество сеансов скульптурно-буккального массажа со скидкой 30%'
@@ -16,7 +16,7 @@ mixin sticker(mainText, secondaryText, preTitle)
     b.sticker__main-text= mainText
     span.sticker__secondary-text= secondaryText
 
-section.application-form
+section.application-form(data-aos='zoom-in' data-aos-duration='500')
   case locals.data.pageData.theme
     when '1'
       +sticker('До года', 'держится результат одного курса, а при поддержке остаётся навсегда')
@@ -29,11 +29,7 @@ section.application-form
   .container.application-form__background
     .application-form__content
       h2.application-form__title.heading.heading_secondary!= formHeading
-      p.application-form__text
-        != formText
-        if (locals.data.pageData.theme !== '1') && (locals.data.pageData.theme !== '7') && (locals.data.pageData.theme !== '10')
-          br
-          span.application-form__notification *Скидка не действует на массаж шейно-воротниковой зоны
+      p.application-form__text!= formText
       include application-form
       .application-form__success-message.hidden
         p.application-form__success-text
