--- a/src/pug/includes/modules/content/features-list.pug
+++ b/src/pug/includes/modules/content/features-list.pug
@@ -5,7 +5,12 @@ section.features-list(class=(locals.data.pageData.featuresBlock.blockNumber ? `f
       ul.features-list__list
         each feature, i in locals.data.pageData.featuresBlock.features
           - var itemClass = 'features-list__item'
-          li.features-list__item(class=(i === 0 ? `${itemClass}_one` : i === 1 ? `${itemClass}_two` : `${itemClass}_three`))
+          - var aosDelay = `${150 * i}`
+          li.features-list__item(
+            class=(i === 0 ? `${itemClass}_one` : i === 1 ? `${itemClass}_two` : `${itemClass}_three`)
+            data-aos='fade-left'
+            data-aos-delay=aosDelay
+          )
             .features-list__image
             h3.features-list__feature-title!= feature.title
             p.features-list__feature-description!= feature.text
