--- a/src/pug/includes/modules/content/video-reviews.pug
+++ b/src/pug/includes/modules/content/video-reviews.pug
@@ -56,7 +56,7 @@
     }
   ]
 
-section.video-reviews
+section.video-reviews(data-aos='fade-up' data-aos-offset='0' data-aos-duration='1000' data-aos-anchor-placement='top-bottom')
   .video-reviews__content.container
     h2.video-reviews__title.heading Видеоотзывы наших клиентов
     each video, i in videoReviews
