--- a/src/pug/pages/classic-facial-massage.pug
+++ b/src/pug/pages/classic-facial-massage.pug
@@ -42,7 +42,7 @@ block variables
       massageResults: {
         title: 'Результаты массажа лица',
         face: {
-          slidesOrder: [1]
+          slidesOrder: [1, 7, 8, 2, 3, 4, 5, 6]
         }
       },
       reviewsBlock: {
