--- a/src/pug/pages/facial-lymphatic-drainage.pug
+++ b/src/pug/pages/facial-lymphatic-drainage.pug
@@ -35,14 +35,14 @@ block variables
           title: 'Кому подойдёт этот массаж?',
           text: [
             `Всем, чья основная цель — снять выраженные отёки и улучшить цвет лица. Правда, если отёки регулярно появляются не только на лице, вам нужен <a class='link link_primary' href='body-lymphatic-drainage.html'>лимфодре&shy;нажный массаж всего тела</a>, так как он убирает не только про&shy;явления, но и причину отёков.`,
-            'Также лимфодренажный массаж лица помогает уменьшить морщины и жирность кожи, но основная его функция именно в борьбе с отёками.'
+            'Также лимфодренажный массаж лица помогает уменьшить жирность и проблемы кожи, но основная его функция именно в борьбе с отёками.'
           ]
         }
       ],
       massageResults: {
         title: 'Результаты массажа лица',
         face: {
-          slidesOrder: [1]
+          slidesOrder: [1, 7, 8, 2, 3, 4, 5, 6]
         }
       },
       reviewsBlock: {
