--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -44,7 +44,7 @@ block variables
         ]
       },
       massageResults: {
-        title: 'Результаты нашего массажа',
+        title: 'Результаты массажа',
         face: {
           slidesOrder: [1, 2, 3, 4, 5, 6, 7, 8]
         },
