--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -27,7 +27,7 @@ block variables
         {
           title: 'Какой будет результат?',
           text: [
-            'Ваши мимические морщинки исчезнут, а глубокие значи&shy;тельно сгладятся. Уйдут отёки, мешки под глазами, второй подбородок. Процесс старения замедлится, ваши черта лица станут изящнее, а признаки старения пропадут.'
+            'Ваши мимические морщинки исчезнут, а глубокие значи&shy;тельно сгладятся. Уйдут отёки, мешки под глазами, второй подбородок. Процесс старения замедлится, ваши черты лица станут изящнее, а признаки старения пропадут.'
           ]
         },
         {
@@ -146,7 +146,7 @@ block variables
         },
         {
           question: `Чем скульптурно-буккальный массаж лучше пластики?`,
-          answer: `Если кратко, то всем. Массаж совершенно не травматичен, и практически не имеет противопоказаний. Его можно делать в любом возрасте и с любым строением лица. Хирургические вмешательства бывают неудачными, а люди после операций часто похожи друг на друга. Подправленное лицо нужно постоянно поддерживать, а если перестать это делать, лицо станет выглядеть гораздо хуже, чем если бы вы не вмешивались в него. Массажем невозможно испортить черты лица&nbsp;— ваше преображение будет естественным, вы станете лучшей версией себя и сохраните результат на всю жизнь, если будете его поддерживать. А если не будете&nbsp;— никакого ужасного отката не случится, будет медленный и обратимый возврат, не критичный. И всё это без инъекций, боли и осложнений.`
+          answer: `Если кратко, то всем. Массаж совершенно не травматичен, и практически не имеет противопоказаний. Его можно делать в любом возрасте и с любым строением лица. Хирургические вмешательства бывают неудачными, а люди после операций часто похожи друг на друга. Подправленное лицо нужно постоянно поддерживать, а если перестать это делать, лицо станет выглядеть гораздо хуже, чем если бы вы не вмешивались в него. Массажем невозможно испортить черты лица&nbsp;— ваше преображение будет естественным, вы станете лучшей версией себя и сохраните результат на всю жизнь, если будете его поддерживать. А если не будете&nbsp;— никакого ужасного отката не случится. И всё это без инъекций, боли и осложнений.`
         },
         {
           question: `В чём отличие этого массажа от&nbsp;других массажей лица?`,
