Scrolling logic of reviews and specialists sliders. AOS fixes

--- a/src/pug/includes/modules/content/articles.pug
+++ b/src/pug/includes/modules/content/articles.pug
@@ -21,7 +21,7 @@
     }
   ]
 
-section.articles
+section.articles(data-aos='fade-up' data-aos-offset='100' data-aos-duration='800' data-aos-anchor-placement='top-bottom')
   .articles__content.container
     h2.articles__title.heading Читайте также
     ul.articles__list
