--- a/src/pug/includes/modules/content/certificate.pug
+++ b/src/pug/includes/modules/content/certificate.pug
@@ -25,7 +25,7 @@
     }
   }
 
-section.certificate
+section.certificate(data-aos='fade-up' data-aos-offset='100' data-aos-duration='800' data-aos-anchor-placement='top-bottom')
   .container
     .certificate__content
       h2.certificate__title.heading Подарочный сертификат
