Fix footer text form

--- a/src/pug/includes/modules/footer/footer.pug
+++ b/src/pug/includes/modules/footer/footer.pug
@@ -19,9 +19,9 @@
 footer.page-footer
   .page-footer__content.container
     p.page-footer__copyright
-      | Любое использование либо копирование материалов или&nbsp;подборки материалов сайта, элементов дизайна и оформления
-      | допускается лишь с разрешения правообладателя и только со&nbsp;ссылкой на источник: https://expert-massage-clinic.ru.
-      | Вся представленная на сайте информация не является публичной офертой
+      | Любое использование либо копирование материалов или подборки материалов сайта, элементов дизайна и оформления
+      | допускается лишь с&nbsp;разрешения правообладателя и&nbsp;только со&nbsp;ссылкой на&nbsp;источник:
+      | https://expert-massage-clinic.ru. Вся представленная на&nbsp;сайте информация не&nbsp;является публичной офертой
     .page-footer__company
       a(href='index.html')
         +picture-tag(footerLogo, footerLogo.mobile.jpg['3x'], 'Клиника профессионального массажа Expert', '125', '26').page-footer__logo
