Fix body lymphatic drainage page typos and text form

--- a/src/pug/pages/body-lymphatic-drainage.pug
+++ b/src/pug/pages/body-lymphatic-drainage.pug
@@ -34,16 +34,16 @@ block variables
         {
           title: 'Зачем нужен лимфодренаж?',
           text: [
-            'Лимфодренажный массаж полностью убирает отёки с лица и со всего тела. За счёт этого уменьшается вес и проходит отёчная форма целлюлита.',
-            'Появляется лёгкость в ногах, ноги не отекают и не гудят после рабочего дня.',
-            'Также лимфодренаж выводит токсины, улучшает работу всех органов и систем, избавляет от хронической усталости, даёт энергию и хорошее настроение. В результате курса значительно укрепляется иммунитет и улучшается общее состояние организма'
+            'Лимфодренажный массаж полно&shy;стью убирает отёки с&nbsp;лица и&nbsp;со&nbsp;всего тела. За&nbsp;счёт этого уменьшается вес и&nbsp;проходит отёчная форма целлюлита.',
+            'Появляется лёгкость в ногах, ноги не&nbsp;отекают и&nbsp;не&nbsp;гудят после рабочего&nbsp;дня.',
+            'Также лимфодренаж выводит токсины, улучшает работу всех органов и&nbsp;систем, избавляет от&nbsp;хронической усталости, даёт энергию и&nbsp;хорошее настроение. В&nbsp;результате курса значительно укрепляется иммунитет и&nbsp;улучшается общее состояние организма'
           ]
         },
         {
           title: 'Что это за процедура?',
           text: [
-            'Лимфодренажный массаж — это комби- нация мощного эстетического эффекта с оздоровлением всего организма.',
-            'Специалист работает по току лимфы, разгоняя межклеточную жидкость. Это в разы ускоряет лимфоток, улучшает обмен веществ, выводит токсины из организма и восстанавливает правильное кровообращение ко всем органам.',
+            'Лимфодренажный массаж — это комбинация мощного эстетического эффекта с оздоровлением всего организма.',
+            'Специалист работает по току лимфы, разгоняя межклеточную жидкость. Это в разы ускоряет лимфоток, улучшает обмен веществ, выводит токсины из организма и восстанавливает правиль&shy;ное кровообращение ко всем органам.',
             'Так как весь организм начинает работать лучше, внешность тоже меняется, улучшается и фигура, и кожа, и контуры лица. Мы проводим массаж всего тела, а не отдельных зон, только так можно достигнуть максимального результата. Эффект от массажа заметен уже после первого сеанса.'
           ]
         },
