Add button shine animation

--- a/src/assets/scss/animation/classes.scss
+++ b/src/assets/scss/animation/classes.scss
@@ -2,6 +2,14 @@
   animation-duration: 0.5s;
 }
 
+.move {
+  animation-name: move;
+}
+
+.rotate {
+  animation-name: rotate;
+}
+
 .zoom-in {
   animation-name: zoom-in;
 }
