--- a/src/assets/scss/animation/keyframes.scss
+++ b/src/assets/scss/animation/keyframes.scss
@@ -1,3 +1,17 @@
+@keyframes move {
+  0% {
+    left: 0;
+  }
+
+  20% {
+    left: 100%;
+  }
+
+  100% {
+    left: 100%;
+  }
+}
+
 @keyframes rotate {
   100% {
     transform: rotate(360deg);
