--- a/src/assets/scss/blocks/header/page-header.scss
+++ b/src/assets/scss/blocks/header/page-header.scss
@@ -104,9 +104,29 @@
   }
 
   &__appointment-button {
+    position: relative;
+
+    overflow: hidden;
     margin-right: 1rem;
 
     font-size: 1.5rem;
+
+    &::after {
+      @include box(2.5rem, 100%);
+
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      overflow: hidden;
+
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.03) 1%, rgba(255, 255, 255, 0.6) 30%, rgba(255, 255, 255, 0.85) 50%, rgba(255, 255, 255, 0.85) 70%, rgba(255, 255, 255, 0.85) 71%, rgba(255, 255, 255, 0) 100%);
+      opacity: 0.35;
+
+      transform: skew(-15deg, 0deg);
+      animation: button-shine 3s linear infinite;
+    }
   }
 
   &[data-state='menu'] {
