Fix button not animated

--- a/src/assets/scss/blocks/header/page-header.scss
+++ b/src/assets/scss/blocks/header/page-header.scss
@@ -125,7 +125,7 @@
       opacity: 0.35;
 
       transform: skew(-15deg, 0deg);
-      animation: button-shine 3s linear infinite;
+      animation: move 3s linear infinite;
     }
   }
 
