--- a/src/pug/includes/modules/content/price-list/price-list.pug
+++ b/src/pug/includes/modules/content/price-list/price-list.pug
@@ -6,12 +6,38 @@ section.price-list
     h2.price-list__title.heading Цены и акции
     .price-list__wrap
       if locals.data.pageData.priceList.showPromo
-        +promo-card(
-          locals.data.globalData.mainPromo.title,
-          locals.data.globalData.mainPromo.subtitle,
-          locals.data.globalData.mainPromo.text,
-          locals.data.globalData.mainPromo.buttonText
-        ).price-list__promotion(data-aos='zoom-in' data-aos-duration='600' data-aos-offset='0' data-aos-anchor-placement='center-bottom')
+        -
+          var promoAppearance = {
+            'data-aos':'zoom-in',
+            'data-aos-duration':'500',
+            'data-aos-offset':'0',
+            'data-aos-anchor-placement':'center-bottom'
+          }
+        if locals.data.pageData.theme === '1'
+          +promo-card(
+            locals.data.globalData.massages['sculptural-buccal-massage'].promo.title,
+            locals.data.globalData.massages['sculptural-buccal-massage'].promo.subtitle,
+            locals.data.globalData.massages['sculptural-buccal-massage'].promo.cardText,
+            locals.data.globalData.massages['sculptural-buccal-massage'].promo.buttonText,
+            locals.data.globalData.massages['sculptural-buccal-massage'].promo.buttonColor,
+            locals.data.globalData.massages['sculptural-buccal-massage'].promo.image
+          ).price-list__promotion.price-list__promotion_photo&attributes(promoAppearance)
+        else if locals.data.pageData.theme === '7'
+          +promo-card(
+            locals.data.globalData.massages['figure-modeling'].promo.title,
+            locals.data.globalData.massages['figure-modeling'].promo.subtitle,
+            locals.data.globalData.massages['figure-modeling'].promo.cardText,
+            locals.data.globalData.massages['figure-modeling'].promo.buttonText,
+            locals.data.globalData.massages['figure-modeling'].promo.buttonColor,
+            locals.data.globalData.massages['figure-modeling'].promo.image
+          ).price-list__promotion.price-list__promotion_photo&attributes(promoAppearance)
+        else
+          +promo-card(
+            locals.data.globalData.mainPromo.title,
+            locals.data.globalData.mainPromo.subtitle,
+            locals.data.globalData.mainPromo.text,
+            locals.data.globalData.mainPromo.buttonText
+          ).price-list__promotion&attributes(promoAppearance)
       .price-list__prices
         each section in priceList.sections
           - var promoText = ''
@@ -35,8 +61,15 @@ section.price-list
                   td.table__cell
                     b.price-list__massage-name= massage.name
                   td.table__cell
+                    if (massage.price.old) && (massage === locals.data.pageData.massage)
+                      span.price-list__old-price!= `${massage.price.old}&thinsp;₽`
+                      br
                     span.price-list__first-price!= `${massage.price.first}&thinsp;₽`
-                  td.table__cell!= `${massage.price.standard}&thinsp;₽`
+                  td.table__cell
+                    if (massage.price.old) && (massage === locals.data.pageData.massage)
+                      span.price-list__old-price!= `${massage.price.old}&thinsp;₽`
+                      br
+                    span.price-list__standard-price!= `${massage.price.standard}&thinsp;₽`
                   td.table__cell!= `${massage.duration}&thinsp;мин`
             p.price-list__promo-text!= promoText
       include callback-form
